# temporal-drift-aware-fraud-detection-with-adversarial-validation

./: .gitignore  LICENSE  README.md  mlflow.db  pyproject.toml  requirements.txt  validate_setup.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
configs/: default.yaml
mlruns/2/00f2319d3d104befbf291f4351ca4f7c/artifacts/: adversarial_validator.pkl  feature_engineer.pkl
models/models/: config.json  training_metrics.json
models/results/: training_results.json
notebooks/: exploration.ipynb
results/: results.json
scripts/: evaluate.py  train.py  train_test_mode.py
src/temporal_drift_aware_fraud_detection_with_adversarial_validation/: __init__.py
src/temporal_drift_aware_fraud_detection_with_adversarial_validation/data/: __init__.py  loader.py  preprocessing.py
src/temporal_drift_aware_fraud_detection_with_adversarial_validation/evaluation/: __init__.py  metrics.py
src/temporal_drift_aware_fraud_detection_with_adversarial_validation/models/: __init__.py  model.py
src/temporal_drift_aware_fraud_detection_with_adversarial_validation/training/: __init__.py  trainer.py
src/temporal_drift_aware_fraud_detection_with_adversarial_validation/utils/: __init__.py  compat.py  compat_minimal.py  config.py
test_output/checkpoints/: ensemble_checkpoint_20260209_220301.pkl
test_output/models/: drift_aware_ensemble.pkl
test_output/results/: training_results.json
tests/: conftest.py  test_basic.py  test_comprehensive.py  test_data.py  test_model.py  test_simple.py  test_training.py
